Day2/homework/blink/build/log/idf_py_stdout_output_11740
[1/12] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\esp\self_learn\ESP32_SELF_LEARN\Day2\homework\blink\build\bootloader\esp-idf\esptool_py && D:\esp\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe D:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/build/bootloader/bootloader.bin"
Bootloader binary size 0x5430 bytes. 0x2bd0 bytes (34%) free.
[2/12] No install step for 'bootloader'
[3/12] Building C object esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/input_iot.c.obj
FAILED: esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/input_iot.c.obj 
ccache D:\esp\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20250707\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.5-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/build/config -ID:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/common/input_iot -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/newlib/platform_include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/config/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/config/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/config/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/FreeRTOS-Kernel/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/freertos/esp_additions/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/include/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/include/soc/esp32s3 -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/dma/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/ldo/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/port/esp32s3/. -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_hw_support/port/esp32s3/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/heap/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/log/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/soc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/soc/esp32s3 -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/soc/esp32s3/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/hal/platform_port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/hal/esp32s3/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/hal/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_rom/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_rom/include/esp32s3 -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_rom/esp32s3 -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_common/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_system/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_system/port/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_system/port/include/private -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/xtensa/esp32s3/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/xtensa/deprecated_include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/include/apps -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/include/apps/sntp -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/lwip/src/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/port/freertos/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/port/esp32xx/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/port/esp32xx/include/arch -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/lwip/port/esp32xx/include/sys -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/driver/deprecated -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/driver/i2c/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/driver/touch_sensor/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/driver/twai/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/driver/touch_sensor/esp32s3/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_pm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_ringbuf/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_gpio/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_pcnt/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_gptimer/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_spi/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_mcpwm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_ana_cmpr/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_i2s/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_sdmmc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/sdmmc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_sdspi/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_sdio/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_dac/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_rmt/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_tsens/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_sdm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_i2c/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_uart/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/vfs/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_ledc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_parlio/include -ID:/esp/Espressif/frameworks/esp-idf-v5.3.5/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink=. -fmacro-prefix-map=D:/esp/Espressif/frameworks/esp-idf-v5.3.5=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/input_iot.c.obj -MF esp-idf\input_iot\CMakeFiles\__idf_input_iot.dir\input_iot.c.obj.d -o esp-idf/input_iot/CMakeFiles/__idf_input_iot.dir/input_iot.c.obj -c D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/common/input_iot/input_iot.c
D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/common/input_iot/input_iot.c: In function 'input_io_press_time':
D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/common/input_iot/input_iot.c:43:9: error: implicit declaration of function 'vTaskDelay' [-Werror=implicit-function-declaration]
   43 |         vTaskDelay(pdMS_TO_TICKS(100));
      |         ^~~~~~~~~~
D:/esp/self_learn/ESP32_SELF_LEARN/Day2/homework/blink/common/input_iot/input_iot.c:43:20: error: implicit declaration of function 'pdMS_TO_TICKS' [-Werror=implicit-function-declaration]
   43 |         vTaskDelay(pdMS_TO_TICKS(100));
      |                    ^~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
[4/12] Completed 'bootloader'
[5/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
ninja: build stopped: subcommand failed.
